Fix custom field list message wrapping issue

--- a/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/listCustomFieldsSuccess.css
+++ b/php/orangehrm/symfony/plugins/orangehrmPimPlugin/web/css/listCustomFieldsSuccess.css
@@ -39,3 +39,7 @@ div.dialogButtons {
     text-align: center;
     vertical-align: bottom;
 }
+
+div.actionbuttons {
+    width: 50%;
+}
